--- a/School Site V2/src/About.html
+++ b/School Site V2/src/About.html
@@ -24,7 +24,7 @@
 <header>
     <nav class="nav navbar navbar-expand-md navbar-light bg-transparent">
         <div class="container-fluid">
-            <a href="Index.html" class="navbar-brand"><img src="badge.svg" alt="school badge"></a>
+            <a href="index.html" class="navbar-brand"><img src="badge.svg" alt="school badge"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button> 
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="Index.html" class="nav-link active">HOME</a>
+                        <a href="index.html" class="nav-link active">HOME</a>
                     </li>
                     <li class="nav-item">
                         <a href="About.html" class="nav-link active">ABOUT</a>
