--- a/School Site V2/src/Contact Form.html
+++ b/School Site V2/src/Contact Form.html
@@ -29,14 +29,14 @@
 </head>
 <nav class="nav navbar navbar-expand-md navbar-light bg-transparent">
     <div class="container-fluid">
-        <a href="Index.html" class="navbar-brand"><img src="badge.svg" alt="school badge"></a>
+        <a href="index.html" class="navbar-brand"><img src="badge.svg" alt="school badge"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse active" id="navbarResponsive">
             <ul class="navbar-nav ml-auto active">
                 <li class="nav-item">
-                    <a href="Index.html" class="nav-link active">HOME</a>
+                    <a href="index.html" class="nav-link active">HOME</a>
                 </li>
                 <li class="nav-item">
                     <a href="About.html" class="nav-link">ABOUT</a>
@@ -89,7 +89,7 @@
                     <br>
                     <textarea class="form-control message" id="Message" placeholder="Enter Message" cols="30" rows="10" required name="data[Message]" onchange="updateMessage(name,value)"></textarea>
                     <br>
-                    <div class="g-recaptcha" data-sitekey="6Ld8IfUaAAAAAEkeyI6Rx4MvdQ1MAIFiMFrqbEmm"></div>
+                    <div class="g-recaptcha" data-sitekey="6LclHPgaAAAAAAaxkyt0MFmB0GGPRJfdF4HTJSpa"></div>
                 </div>
                 <button type="submit" class="btn btn-info" onclick="sendEmail()"><strong>Submit</strong></button>
             </form>
