--- a/School Site V3/src/index.html
+++ b/School Site V3/src/index.html
@@ -58,7 +58,7 @@
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/src/Slideshow1.jpg" alt="Slide1" width="1100" height="500">
+            <img src="Slideshow1.jpg" alt="Slide1" width="1100" height="500">
             <div class="carousel-caption">
                 <h1>WE AIM FOR THE 100%</h1>
                 <h3>VOLHARD EN OORWIN</h3>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/src/Slideshow 2.jpg" alt="Slide2" width="1100" height="500">
+            <img src="Slideshow 2.jpg" alt="Slide2" width="1100" height="500">
             <div class="carousel-caption">
                 <h1>WE AIM FOR THE 100%</h1>
                 <h3>VOLHARD EN OORWIN</h3>
